@@ -32,56 +32,92 @@ public class ReservationServiceImpl implements ReservationService{
 
     @Override
     public boolean makeReservation(Member member, Flight flight, List<Ticket> tickets) throws SQLException, InsufficientBalanceException, MemberNotFoundException {
-        Connection con = DBManager.getConnection();
-        con.setAutoCommit(false);
-        int count = tickets.size();
-        int totalAmount = (int)Math.round(flight.getPrice()) * count;
-        member.setBalance(-totalAmount);
-        long reservationId = reservationDao.insertReservation(con, member.getId(), count, totalAmount);
-        for(Ticket t : tickets){
-            t.setReservationId(reservationId);
-            t.setFlightId(flight.getFlight_id());
+        Connection con = null;
+        try {
+            con = DBManager.getConnection();
+            con.setAutoCommit(false);
+            int count = tickets.size();
+            int totalAmount = (int)Math.round(flight.getPrice()) * count;
+            member.setBalance(-totalAmount);
+            long reservationId = reservationDao.insertReservation(con, member.getId(), count, totalAmount);
+            for(Ticket t : tickets){
+                t.setReservationId(reservationId);
+                t.setFlightId(flight.getFlight_id());
+            }
+            ticketDao.insertTicket(con, tickets);
+            for(Ticket t : tickets){
+                seatDao.update(con, t.getFlightId(), t.getSeats(), 0);
+            }
+            flightDao.updateSeatCount(con, flight.getFlight_id());
+            Member updated = memberDao.updateBalance(con, member);
+            if(updated != null){
+                Session session = new Session(member.getEmail(), member);
+                SessionSet ss = SessionSet.getInstance();
+                ss.remove(session);
+                session = new Session(updated.getEmail(), updated);
+                ss.add(session);
+                member.setBalance(updated.getBalance());
+            }
+            con.commit();
+        } finally {
+            DBManager.releaseConnection(con, null);
         }
-        ticketDao.insertTicket(con, tickets);
-        for(Ticket t : tickets){
-            seatDao.update(con, t.getFlightId(), t.getSeats(), 0);
-        }
-        flightDao.updateSeatCount(con, flight.getFlight_id());
-        Member updated = memberDao.updateBalance(con, member);
-        if(updated != null){
-            Session session = new Session(member.getEmail(), member);
-            SessionSet ss = SessionSet.getInstance();
-            ss.remove(session);
-            session = new Session(updated.getEmail(), updated);
-            ss.add(session);
-            member.setBalance(updated.getBalance());
-        }
-        con.commit();
-        DBManager.releaseConnection(con, null);
+
         return true;
     }
 
     @Override
     public boolean cancleReservation(Member member, Reservation reservation) throws SQLException, InsufficientBalanceException, MemberNotFoundException {
-        Connection con = DBManager.getConnection();
-        List<Ticket> ticketList = ticketDao.selectByReservationId(con, reservation.getReservationId());
-        Ticket ticket = ticketList.getFirst();
-        member.setBalance(reservation.getTotal_amount());
-        long flightId = ticket.getFlightId();
-        ticketDao.deleteTicket(con, reservation.getReservationId());
-        reservationDao.deleteReservation(con, reservation.getReservationId());
-        for(Ticket t : ticketList){
-            seatDao.update(con, flightId, t.getSeats(), 1);
+        Connection con = null;
+        try {
+            con = DBManager.getConnection();
+            con.setAutoCommit(false);
+            List<Ticket> ticketList = ticketDao.selectByReservationId(con, reservation.getReservationId());
+            Ticket ticket = ticketList.get(0);
+            member.setBalance(reservation.getTotal_amount());
+            long flightId = ticket.getFlightId();
+            ticketDao.deleteTicket(con, reservation.getReservationId());
+            reservationDao.deleteReservation(con, reservation.getReservationId());
+            for(Ticket t : ticketList){
+                seatDao.update(con, flightId, t.getSeats(), 1);
+            }
+            flightDao.updateSeatCount(con, flightId);
+            Member updated = memberDao.updateBalance(con, member);
+            if(updated != null){
+                Session session = new Session(member.getEmail(), member);
+                SessionSet ss = SessionSet.getInstance();
+                ss.remove(session);
+                session = new Session(updated.getEmail(), updated);
+                ss.add(session);
+                member.setBalance(updated.getBalance());
+            }
+            con.commit();
+        } finally {
+            DBManager.releaseConnection(con, null);
         }
-        flightDao.updateSeatCount(con, flightId);
-        Member updated = memberDao.updateBalance(con, member);
-        if(updated != null){
-            Session session = new Session(member.getEmail(), member);
-            SessionSet ss = SessionSet.getInstance();
-            ss.remove(session);
-            session = new Session(updated.getEmail(), updated);
-            ss.add(session);
-            member.setBalance(updated.getBalance());
+        return true;
+    }
+
+    @Override
+    public boolean cancleReservation(Member admin, Member member, Reservation reservation) throws SQLException, InsufficientBalanceException, MemberNotFoundException {
+        Connection con = null;
+        try {
+            con = DBManager.getConnection();
+            con.setAutoCommit(false);
+            List<Ticket> ticketList = ticketDao.selectByReservationId(con, reservation.getReservationId());
+            Ticket ticket = ticketList.get(0);
+            member.setBalance(reservation.getTotal_amount());
+            long flightId = ticket.getFlightId();
+            ticketDao.deleteTicket(con, reservation.getReservationId());
+            reservationDao.deleteReservation(con, reservation.getReservationId());
+            for(Ticket t : ticketList){
+                seatDao.update(con, flightId, t.getSeats(), 1);
+            }
+            flightDao.updateSeatCount(con, flightId);
+            memberDao.updateBalance(con, member);
+            con.commit();
+        } finally {
+            DBManager.releaseConnection(con, null);
         }
         return true;
     }
@@ -111,6 +147,7 @@ public class ReservationServiceImpl implements ReservationService{
 
     @Override
     public List<Ticket> selectMemberTicket(long reservationId) throws SQLException {
+        System.out.println(reservationId);
         return ticketDao.selectByReservationId(reservationId);
     }
 
